# AGLDM

./: .gitignore  README.md  pyproject.toml  pytest.ini
agldm/: __init__.py  cli.py  config.py
agldm/data/: __init__.py  cub.py  datasets.py  prepare.py  types.py
agldm/evaluation/: __init__.py  metrics.py  pipeline.py
agldm/models/: __init__.py  classifier.py  common.py  diffusion.py  text.py  vqvae.py
agldm/training/: __init__.py  classifier.py  common.py  ldm.py  vqvae.py
agldm/utils/: __init__.py  checkpointing.py  ema.py  images.py  logging.py  seed.py
configs/data/: cub.yaml
configs/model/: agldm_cub.yaml
configs/train/: base.yaml
tests/: test_datasets.py  test_ldm.py  test_models.py  test_prepare.py
tests/fixtures/: manifest_double_a.jsonl  manifest_double_b.jsonl  manifest_single.jsonl  sample_0.ppm  sample_1.ppm
tests/fixtures/runtime/: .gitkeep
